--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <!-- 讓網頁響應式(RWD)設置生效 -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="./../style/index.css">
+    <link rel="stylesheet" href="./style/index.css">
     <title>hello</title>
 </head>
 
@@ -31,7 +31,7 @@
     </div>
 </body>
 
-<script src="./../js/index.js">
+<script src="./js/index.js">
 </script>
 
 </html>
