--- a/characters.html
+++ b/characters.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <!-- 讓網頁響應式(RWD)設置生效 -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="./../style/characters.css">
+    <link rel="stylesheet" href="./style/characters.css">
     <title>hello</title>
 </head>
 
@@ -23,19 +23,19 @@
         </div>
         <div class="grid">
             <div class="character Eva">
-                <img src="./../img/eva.png" alt="">
+                <img src="./img/eva.png" alt="">
                 <div class="name">
                     <p>Eva</p>
                 </div>
             </div>
             <div class="character JoJo">
-                <img src="./../img/jojo.png" alt="">
+                <img src="./img/jojo.png" alt="">
                 <div class="name">
                     <p>JoJo</p>
                 </div>
             </div>
             <div class="character Bogi">
-                <img src="./../img/bogi.png" alt="">
+                <img src="./img/bogi.png" alt="">
                 <div class="name">
                     <p>Bogi</p>
                 </div>
@@ -106,7 +106,7 @@
     </div>
 </body>
 
-<script src="./../js/characters.js">
+<script src="./js/characters.js">
 </script>
 
 </html>
