--- a/characters.html
+++ b/characters.html
@@ -8,7 +8,7 @@
     <!-- 讓網頁響應式(RWD)設置生效 -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="./style/characters.css">
-    <title>hello</title>
+    <title>choose-character</title>
 </head>
 
 <body>
